fix color contrast issue

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,18 @@ input[type='number']:focus {
 input::placeholder {
   color: rgb(211, 211, 211) !important;
 }
+.btn {
+  color: #f89827;
+  background: transparent;
+  border-radius: 0;
+  border: 2px solid #f89827;
+}
+.btn:hover {
+  color: #fff;
+  background: transparent;
+  border-radius: 0;
+  border: 2px solid #fff;
+}
 select:focus {
   background: none !important;
   color: #f89827 !important;
